<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SplashScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/users_logo"
        android:transitionName="logo_image" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/title_app"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/text_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/by_title"
        android:textAlignment="center"
        android:textColor="#6E11EC"
        android:textSize="20sp" />

</LinearLayout>